--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,10 @@ header {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: relative; /* Asegura que los elementos se alineen bien en el header */
+    position: sticky;
+    /* Asegura que los elementos se alineen bien en el header */
+    top: 0;
+    z-index: 1000;
 }
 
 /* Logo: imagen + h1 */
@@ -40,10 +43,24 @@ nav.navbar {
 nav ul {
     list-style: none;
     display: flex;
-    gap: 20px;
-    margin-right: 20px;
-}
+    gap: 10px;
+    margin-right: 0;
+    padding: 0;
+    width: 100%;
+    justify-content: space-between;
+    transition: opacity 0.3s ease, visibility 0s 0.3s;
 
+}
+/*
+nav ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    flex-basis: 33%;
+    white-space: nowrap;
+}
+*/
 nav ul li a {
     color: var(--color-white);
     font-weight: bold;
@@ -74,9 +91,9 @@ nav ul li a:hover {
 .language-toggle {
     display: flex;
     align-items: center;
-    margin-left: 20px; 
-    margin-right: 20px; 
-    z-index: 10; 
+    margin-left: 20px;
+    margin-right: 20px;
+    z-index: 10;
 }
 
 .language-toggle button {
