--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -35,7 +35,7 @@
     nav ul {
         display: none;
         position: absolute;
-        top: 60px;
+        top: 70px;
         left: 0;
         width: 100%;
         background-color: #495453;
@@ -45,10 +45,12 @@
         border-radius: 0 0 8px 8px;
         text-align: center;
         z-index: 100;
+        transition: top 0.3s ease;
     }
 
     nav.active ul {
         display: flex;
+        top: 65px;
     }
 
     nav ul li {
