--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,7 @@
 /* hero.css */
 .hero {
     background-color: transparent;
-    color: var(--color-white);
+    color: var(--color-lavanda);
     text-align: center;
     padding: 5rem 0;
     display: flex;
@@ -27,16 +27,18 @@
 }
 
 .cta-button {
-    padding: 10px 20px;
-    font-size: 1.2rem;
+    margin: 0 auto;
     background-color: var(--color-white);
-    color: var(--color-secondary);
+    color: var(--color-lavanda);
     border: none;
+    padding: 15px;
+    font-size: 1.1rem;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .cta-button:hover {
-    background-color: #ff6600;
+    background-color:  var(--color-lavanda);
     color: var(--color-white);
 }
