--- a/styles/presentacion.css
+++ b/styles/presentacion.css
@@ -14,26 +14,28 @@
     max-width: 1200px;
     margin: 0 auto;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .presentacion-imagen img {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: auto;
     border-radius: 10px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    object-fit: contain;
 }
 
 .presentacion-texto {
     flex: 1;
     max-width: 600px;
-    color: var(--color-white);
+    color: var(--color-lavanda);
     text-align: left;
 }
 
 .presentacion-texto h2 {
     font-size: 2.5rem;
-    color: var(--color-white);
+    color: var(--color-lavanda);
     margin-bottom: 20px;
 }
 
