--- a/styles/products.css
+++ b/styles/products.css
@@ -8,6 +8,7 @@
 .products h2 {
     font-size: 2.5em;
     margin-bottom: 20px;
+    color: var(--color-lavanda);
 }
 
 /* CONTENEDOR DEL CARRUSEL SWIPER */
