--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
     --color-secondary: #f5c8bf;
     --color-bg: #f5f5f5;
     --color-text: #333;
+    --color-lavanda: #8d3571;
     --color-white: #ffffff;
 
     --font-main: 'Arial', sans-serif;
